--- a/charts/azure-vote/values.yaml
+++ b/charts/azure-vote/values.yaml
@@ -1,3 +1,6 @@
   
 # Default value for frontendServiceName unless overriden
 frontendServiceName: azure-vote-front
+ingress:
+  domainSuffix: kainiindustries.net
+  servicePort: 80
