--- a/charts/azure-vote/templates/ingress.yaml
+++ b/charts/azure-vote/templates/ingress.yaml
@@ -11,5 +11,5 @@ spec:
       paths:
         - path: /
           backend:
-            serviceName: {{.Release.Name}}-vote-front
+            serviceName: {{ .Values.frontendServiceName }}
             servicePort: "{{ .Values.ingress.servicePort }}"
