--- a/charts/azure-vote/templates/ingress.yaml
+++ b/charts/azure-vote/templates/ingress.yaml
@@ -1,7 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{.Release.Name}}-ingress
+  name: {{.Release.Name}}vote-front-ingress
+  namespace: {{ .Release.Namespace }}
   annotations:
     ingress.kubernetes.io/rewrite-target: /
 spec:
