--- a/charts/azure-vote/templates/ingress.yaml
+++ b/charts/azure-vote/templates/ingress.yaml
@@ -12,5 +12,5 @@ spec:
       paths:
         - path: /
           backend:
-            serviceName: "{{ .Values.frontendServiceName }}"
-            servicePort: "{{ .Values.ingress.servicePort }}"
+            serviceName: {{ .Values.frontendServiceName }}
+            servicePort: {{ .Values.ingress.servicePort }}
