--- a/charts/azure-vote/values.yaml
+++ b/charts/azure-vote/values.yaml
@@ -1,6 +1,7 @@
   
 # Default value for frontendServiceName unless overriden
 frontendServiceName: azure-vote-front
+frontendReplicaCount: 3
 ingress:
   hostName: vote-app
   domainSuffix: kainiindustries.net
