--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,5 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-clusters/_output
-clusters/translations
+_output
+translations
